fixed navbar and main content gap

--- a/new-theme/codeitforward-fraserriverkeeper-55b4015eebad647b23000001/_navbar.scss
+++ b/new-theme/codeitforward-fraserriverkeeper-55b4015eebad647b23000001/_navbar.scss
@@ -751,14 +751,14 @@
 
   .navbar-custom
   {
-    background-color: #37677F;
+    background-color: #69BFEB;
   }
 
   .collapse
   {
     &.in
     {
-      background-color: #37677F;
+      background-color: #69BFEB;
     }
   }
 
